--- a/Home-Tasks-main/Frontend Mentor/main.scss
+++ b/Home-Tasks-main/Frontend Mentor/main.scss
@@ -23,50 +23,44 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
-      ul {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        li {
-          list-style: none;
-          a {
-            position: relative;
-            text-decoration: none;
-            color: white;
-            padding: 20px;
-            font-size: 22px;
-            &:hover::after {
-              position: absolute;
-              content: "";
-              display: block;
-              border: 1px solid white;
-              width: 100%;
-            }
-          }
-        }
-      }
-      .menu-btn {
-        display: none;
-        list-style: none;
-        a {
-          text-decoration: none;
-          .menu-btn {
-            text-decoration: none;
-          }
-        }
+    }
+  }
+}
+ul {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  li {
+    list-style: none;
+    a {
+      position: relative;
+      text-decoration: none;
+      color: white;
+      padding: 20px;
+      font-size: 22px;
+      &:hover::after {
+        position: absolute;
+        content: "";
+        display: block;
+        border: 1px solid white;
+        width: 100%;
       }
     }
   }
-  .header-text {
-    margin-top: 80px;
-    width: 60%;
-    color: white;
-    font-size: 55px;
-    font-weight: 100;
-    border: 1px solid white;
-    padding: 50px 80px;
-  }
 }
+.menu-btn {
+  display: none;
+}
+.header-text {
+  margin-top: 80px;
+  width: 60%;
+  color: white;
+  font-size: 55px;
+  font-weight: 100;
+  border: 1px solid white;
+  padding: 50px 80px;
+}
+
 @media only screen and (max-width: 768px) {
   .heaer-sec {
     .header {
@@ -79,21 +73,21 @@
       nav {
         display: flex;
         align-items: center;
-        ul {
-          display: none;
-        }
-        .menu-btn {
-          margin-bottom: 8px;
-          list-style: none;
-          display: block;
-        }
-      }
-      .header-text {
-        width: 40%;
-        font-size: 16px;
-        padding: 10px 20px;
       }
     }
+  }
+  .header {
+    ul {
+      display: none;
+    }
+  }
+  .menu-btn {
+    display: block;
+  }
+  .header-text {
+    width: 60%;
+    font-size: 40px;
+    padding: 20px 40px;
   }
 }
 
@@ -148,18 +142,16 @@
 
 //////sec3
 
-.creations {
-  width: 100%;
-  height: 100%;
-  .buttons-row {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    h1 {
-      letter-spacing: 2px;
-      font-size: 50px;
-      font-weight: 100;
-    }
+.buttons-row {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  h1 {
+    letter-spacing: 2px;
+    font-size: 50px;
+    font-weight: 100;
+  }
+  .hidden-see {
     a {
       color: black;
       text-decoration: none;
@@ -172,24 +164,16 @@
       }
     }
   }
-  .first-cards {
-    margin-top: 30px;
-    display: flex;
-    align-items: center;
-  }
-  .last-cards {
-    display: flex;
-    align-items: center;
-  }
+}
+.creations {
+  width: 100%;
+  height: 100%;
   .img-card {
     position: relative;
-    margin: 15px;
-    width: 25%;
-    height: 50%;
-    padding: 0;
+    padding: 10px;
     img {
       width: 100%;
-      height: 50%;
+      height: 100%;
       &:hover {
         opacity: 0.5;
       }
@@ -201,54 +185,38 @@
       position: absolute;
       left: 10px;
       bottom: 10px;
+      padding: 10px;
     }
   }
   .responsive-button {
     display: none;
   }
-
 }
 @media only screen and (max-width: 768) {
-  // .hidden-see a{
-  //   display: none;
-  // }
-  .responsive-button {
-    display: block;
-    justify-content: center;
-    margin: 15px;
-    a {
-      color: black;
-      text-decoration: none;
-      letter-spacing: 3px;
-      padding: 15px 40px;
-      border: 1px solid black;
-      margin-bottom: 30px;
-      &:hover {
-        color: white;
-        background-color: black;
+  .buttons-row {
+    .hidden-see {
+      display: none;
+    }
+  }
+  .creations {
+    .responsive-button {
+      display: block;
+      justify-content: center;
+      margin: 15px;
+      a {
+        color: black;
+        text-decoration: none;
+        letter-spacing: 3px;
+        padding: 15px 40px;
+        border: 1px solid black;
+        margin-bottom: 30px;
+        &:hover {
+          color: white;
+          background-color: black;
+        }
       }
     }
   }
-  .reverse{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-   .row{
-    display: flex;
-    flex-direction: column;
-    display: block;
-    .img-card{
-      width: 100%;
-      height: 25vh;
-      display: flex;
-      flex-direction: column;
-      img{
-        width: 100%;
-      }
-    }
-  } 
-  }
-  
 }
 
 ////footer
