--- a/Home-Tasks-main/Frontend Mentor/main.css
+++ b/Home-Tasks-main/Frontend Mentor/main.css
@@ -5,6 +5,7 @@
 }
 
 .header-sec {
+  display: block !important;
   width: 100%;
   height: 100vh;
   background-image: url(./images/image-hero.jpg);
@@ -50,6 +51,9 @@ ul li a:hover::after {
   border: 1px solid white;
   width: 100%;
 }
+ul li a:hover {
+  color: white;
+}
 
 .menu-btn {
   display: none;
@@ -90,6 +94,43 @@ ul li a:hover::after {
     padding: 20px 40px;
   }
 }
+.hidden-section {
+  display: none !important;
+  width: 100%;
+  height: 100vh;
+  background-color: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.hidden-section .top-head {
+  margin-top: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.hidden-section .top-head i {
+  padding: 0;
+  color: white;
+  font-size: 24px;
+}
+.hidden-section .pages {
+  margin-bottom: 40px;
+  margin-top: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.hidden-section .pages nav ul {
+  display: flex;
+  flex-direction: column;
+}
+.hidden-section .pages nav ul li {
+  color: white;
+  padding: 10px;
+}
+
 .interactive {
   width: 100%;
   height: 100vh;
@@ -142,6 +183,7 @@ ul li a:hover::after {
   font-weight: 100;
 }
 .buttons-row .hidden-see a {
+  display: block;
   color: black;
   text-decoration: none;
   letter-spacing: 3px;
@@ -154,6 +196,7 @@ ul li a:hover::after {
 }
 
 .creations {
+  margin-bottom: 70px;
   width: 100%;
   height: 100%;
 }
@@ -163,7 +206,6 @@ ul li a:hover::after {
 }
 .creations .img-card img {
   width: 100%;
-  height: 100%;
 }
 .creations .img-card img:hover {
   opacity: 0.5;
@@ -184,6 +226,12 @@ ul li a:hover::after {
 @media only screen and (max-width: 768) {
   .buttons-row .hidden-see {
     display: none;
+  }
+  .creations .img-card {
+    height: 50px;
+  }
+  .creations .img-card img {
+    height: 30px;
   }
   .creations .responsive-button {
     display: block;
@@ -238,7 +286,7 @@ footer .footer .right {
   flex-direction: column;
 }
 footer .footer .right .copy-2023 {
-  color: rgb(201, 198, 198);
+  color: rgb(94, 94, 94);
 }
 footer .footer .right .icons {
   display: flex;
