--- a/Home-Tasks-main/Frontend Mentor/main.scss
+++ b/Home-Tasks-main/Frontend Mentor/main.scss
@@ -4,6 +4,7 @@
   box-sizing: border-box;
 }
 .header-sec {
+  display: block !important;
   width: 100%;
   height: 100vh;
   background-image: url(./images/image-hero.jpg);
@@ -44,6 +45,9 @@ ul {
         display: block;
         border: 1px solid white;
         width: 100%;
+      }
+      &:hover {
+        color: white;
       }
     }
   }
@@ -88,6 +92,48 @@ ul {
     width: 60%;
     font-size: 40px;
     padding: 20px 40px;
+  }
+}
+
+///////hidden-sec
+
+.hidden-section{
+  display: none !important;
+  width: 100%;
+  height: 100vh;
+  background-color: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  .top-head{
+    margin-top: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    i{
+      padding: 0;
+      color: white;
+      font-size: 24px;
+    }
+  }
+  .pages{
+    margin-bottom: 40px;
+    margin-top: 40px;
+    display: flex;
+    align-items: center;
+    justify-content:center ;
+    nav{
+     ul{
+      display: flex;
+      flex-direction: column;
+      li{
+        color: white;
+        padding: 10px;
+      }
+     }
+    }
+
   }
 }
 
@@ -153,6 +199,7 @@ ul {
   }
   .hidden-see {
     a {
+      display: block;
       color: black;
       text-decoration: none;
       letter-spacing: 3px;
@@ -166,6 +213,7 @@ ul {
   }
 }
 .creations {
+  margin-bottom: 70px;
   width: 100%;
   height: 100%;
   .img-card {
@@ -173,7 +221,7 @@ ul {
     padding: 10px;
     img {
       width: 100%;
-      height: 100%;
+      // height: 100%;
       &:hover {
         opacity: 0.5;
       }
@@ -199,6 +247,12 @@ ul {
     }
   }
   .creations {
+    .img-card {
+      height: 50px;
+      img{
+        height: 30px;
+      }
+    }
     .responsive-button {
       display: block;
       justify-content: center;
@@ -255,7 +309,7 @@ footer {
       display: flex;
       flex-direction: column;
       .copy-2023 {
-        color: rgb(201, 198, 198);
+        color: rgb(94, 94, 94);
       }
       .icons {
         display: flex;
